--- a/PositivityZone/PositivityZone/PositivityZone.csproj
+++ b/PositivityZone/PositivityZone/PositivityZone.csproj
@@ -10,6 +10,10 @@
     <DebugSymbols>true</DebugSymbols>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <PlatformTarget>AnyCPU</PlatformTarget>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="RestSharp" Version="106.11.7" />
     <PackageReference Include="Xam.Plugin.Connectivity" Version="3.2.0" />
